# NorvesEditor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/agents/: impl-reviewer.md  implementer.md  plan-reviewer.md  planner.md  researcher.md  verifier.md
.claude/hooks/: enforce-codex-impl.mjs  mirror-guard.mjs  session-start-reminder.mjs
.codex/: hooks.json
.codex/agents/: impl_reviewer.toml  implementer.toml  plan_reviewer.toml  planner.toml  researcher.toml  test_designer.toml  verifier.toml
.codex/hooks/: codex-impl-guard.mjs  mirror-guard.mjs  session-start-reminder.mjs  trust-hooks.mjs  workspace-guard.mjs
.harness/: cadence.json
apps/editor/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/editor/src/: App.tsx  main.tsx  styles.css
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/src-tauri/capabilities/: default.json  secondary-windows.json
apps/editor/src-tauri/icons/: icon.icns
apps/editor/src-tauri/src/: asset_manifest.rs  bridge_state.rs  dto.rs  error.rs  events_map.rs  lib.rs  main.rs  process.rs  process_runtime.rs  protocol_names.rs  workspace.rs
apps/editor/src-tauri/tests/: process_e2e.rs
apps/editor/src/__tests__/: App.layoutReset.test.tsx  App.routing.test.tsx
apps/editor/src/components/: AppLayout.tsx  AssetBrowserPanel.tsx  AssetInspectorPanel.tsx  ConnectionPanel.tsx  GameViewPanel.tsx  LogPanel.tsx  PropertyInspectorPanel.tsx  SceneOutlinerPanel.tsx  SettingsPanel.tsx
apps/editor/src/hooks/: useBridge.ts  useUndoRedoKeybindings.ts
apps/editor/src/shell/: AppTitleBar.tsx  SecondaryWindowRoot.tsx  assetPath.ts  layoutReset.ts  windowControls.ts  windowManager.ts  windowRoute.ts
apps/editor/src/state/: BridgeContext.tsx  store.ts
bridge/conformance/runners/: alpha_method_sequence.json
bridge/cpp/: .clang-format  .clang-tidy  CMakeLists.txt
bridge/cpp/engine-sdk/: CMakeLists.txt
bridge/cpp/engine-sdk/include/Norves/Bridge/: adapter.hpp  bounded_queue.hpp  codec.hpp  codec_error.hpp  envelope.hpp  error.hpp  json_value.hpp  log_sink.hpp  ownership.hpp  result.hpp  server.hpp  transport.hpp  version.hpp  ws_server_transport.hpp
bridge/cpp/engine-sdk/include/Norves/Bridge/Dto/: common.hpp  events.hpp  methods.hpp
bridge/cpp/engine-sdk/include/norves/bridge/: adapter.hpp  bounded_queue.hpp  codec.hpp  codec_error.hpp  envelope.hpp  error.hpp  json_value.hpp  log_sink.hpp  ownership.hpp  result.hpp  server.hpp  transport.hpp  version.hpp  ws_server_transport.hpp
bridge/cpp/engine-sdk/include/norves/bridge/dto/: common.hpp  events.hpp  methods.hpp
bridge/cpp/engine-sdk/src/: bounded_queue.cpp  codec.cpp  dto_codec.cpp  envelope.cpp  json_value.cpp  json_value_impl.hpp  loopback_transport.cpp  server.cpp  version.cpp  ws_server_transport.cpp
bridge/cpp/engine-sdk/tests/: CMakeLists.txt  bounded_queue_test.cpp  dispatch_test.cpp  fixtures_roundtrip_test.cpp  loopback_roundtrip_test.cpp  smoke_test.cpp  test_support.hpp  ws_server_transport_test.cpp  ws_test_server.cpp
bridge/cpp/examples/: CMakeLists.txt
bridge/cpp/examples/mock-engine/: CMakeLists.txt  loopback_smoke.cpp  main.cpp  mock_adapter.hpp
bridge/crates/norves-bridge-core/: Cargo.toml
bridge/crates/norves-bridge-core/src/: codec.rs  common.rs  correlation.rs  envelope.rs  error.rs  lib.rs  value.rs
bridge/crates/norves-bridge-core/tests/: fixtures_roundtrip.rs
bridge/crates/norves-bridge-dump/: Cargo.toml
bridge/crates/norves-bridge-dump/src/: main.rs
bridge/crates/norves-bridge-editor-client/: Cargo.toml
bridge/crates/norves-bridge-editor-client/src/: asset.rs  capabilities.rs  dispatcher.rs  handshake.rs  lib.rs  log.rs  object.rs  reconnect.rs  scene.rs  seq.rs  status.rs  transport.rs  viewport.rs  ws_transport.rs
bridge/crates/norves-bridge-editor-client/tests/: conformance.rs  legacy_handshake_compat.rs  loopback_roundtrip.rs  ws_reconnect.rs  ws_roundtrip.rs
bridge/crates/norves-bridge-tools/: Cargo.toml
bridge/spec/docs/: capabilities.md  error-model.md  message-envelope.md  message-payloads.md  protocol-overview.md
bridge/spec/fixtures/: README.md
bridge/spec/schema/: common.schema.json  envelope.schema.json
bridge/spec/schema/events/: bridge.connected.params.schema.json  bridge.disconnected.params.schema.json  engine.processExited.params.schema.json  engine.statusChanged.params.schema.json  error.reported.params.schema.json  log.message.params.schema.json  object.changed.params.schema.json  runtime.stateChanged.params.schema.json  scene.treeChanged.params.schema.json  viewport.stateChanged.params.schema.json
bridge/spec/schema/methods/: asset.getManifest.params.schema.json  asset.getManifest.result.schema.json  asset.reloadManifest.params.schema.json  asset.reloadManifest.result.schema.json  (+40 more)
docs/: alpha-project-plan.md  alpha-scope.md  architecture.md  asset-editor-plan.md  build.md  engine-integration.md  engine-profile.md  memory-buffer-policy.md  norveslib-integration.md  phase2-editor-evolution-plan.md  protocol-debugging.md  scene-structure-editing-plan.md  technology-decisions.md  ui-shell-overhaul-brief.md  viewport-strategy.md  vision.md
docs/adr/: 0001-editor-owned-bridge-subsystem.md  0002-tauri-rust-editor-backend.md  0003-websocket-json-bridge-control-channel.md  0004-cpp-engine-sdk.md  0005-external-engine-viewport-for-alpha.md  0006-bridge-error-model-and-versioning.md  0007-cpp-websocket-library-libwebsockets.md  0008-cpp23-and-norveslib-style-alignment.md  0009-cpp-bridge-namespace-pascalcase.md  README.md
docs/agent-guide/: README.md  architecture.md  branching-and-commits.md  build-and-verify.md  coding-style.md  cpp.md  external-references.md  memory-buffer.md  norveslib-adapter.md  orchestration.md  protocol-schema.md  rust.md  tauri-security.md  typescript.md
docs/superpowers/plans/: 2026-07-16-asset-manifest-reload-implementation.md
docs/superpowers/specs/: 2026-07-16-asset-manifest-reload-design.md
scripts/: check-protocol-names.mjs  validate-bridge-fixtures.py  verify.ps1
(+184 files in other folders)
