[workspace]
resolver = "2"
members = [
    "bridge/crates/norves-bridge-core",
    "bridge/crates/norves-bridge-editor-client",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Async runtime for the editor-client dispatcher (D5a). Kept minimal: no I/O
# drivers here — the transport is abstracted behind a trait. Only the
# editor-client (and never the core crate) may pull tokio/tracing in.
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"
norves-bridge-core = { path = "bridge/crates/norves-bridge-core" }
