[workspace]
resolver = "2"
members = [
    "bridge/crates/norves-bridge-core",
    "bridge/crates/norves-bridge-editor-client",
    "bridge/crates/norves-bridge-tools",
    "bridge/crates/norves-bridge-dump",
]
# The Tauri Rust crate (created in P1) is its own standalone Cargo workspace;
# exclude it here so the root workspace never auto-absorbs it.
exclude = ["apps/editor/src-tauri"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Async runtime for the editor-client dispatcher (D5a). Kept minimal: no I/O
# drivers here — the transport is abstracted behind a trait. Only the
# editor-client (and never the core crate) may pull tokio/tracing in.
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"
# Real WebSocket client transport for the editor-client (G2). TLS is left at the
# crate default (off): the editor only ever dials a local ws://127.0.0.1:<port>
# engine, so no native-tls/rustls stack is pulled in. `futures-util` supplies the
# StreamExt/SinkExt/.split() used to drive the WebSocketStream. Both stay
# editor-client-only; the core crate must never gain a WS/I/O dependency.
tokio-tungstenite = "0.29"
futures-util = "0.3"
norves-bridge-core = { path = "bridge/crates/norves-bridge-core" }
# CLI argument parser for norves-bridge-tools. `derive` enables the proc-macro
# derive API; `cargo` feature is not needed (no cargo-specific helpers used).
clap = { version = "4", features = ["derive"] }
# Error handling helper for CLI binaries (tools only — never for library crates).
anyhow = "1"
# tracing-subscriber initializes the tracing backend in CLI binaries.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
