# Standalone Cargo workspace: the empty [workspace] table makes this crate its
# own workspace root, so the repo-root bridge workspace (which `exclude`s this
# path) never auto-absorbs it. P5 wires the real editor-client runtime: path
# deps on the two bridge crates plus a tokio runtime for spawning the relay task
# and awaiting requests. Tauri provides an ambient multi-thread runtime, so we
# prefer `tauri::async_runtime::spawn` for tasks; tokio is depended on directly
# for the sync primitives (Mutex/Notify) and Duration-bounded request awaits.
[workspace]

[package]
name = "norves-editor"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "NorvesEditor Tauri desktop application"
license = "Apache-2.0"
publish = false

[lib]
name = "norves_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "norves-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bridge crates: src-tauri is a separate workspace, so reference the bridge
# crates by explicit relative path (no workspace inheritance available here).
norves-bridge-editor-client = { path = "../../../bridge/crates/norves-bridge-editor-client" }
norves-bridge-core = { path = "../../../bridge/crates/norves-bridge-core" }
# rt-multi-thread + macros: parity with the runtime Tauri spins up. sync: the
# Mutex/Notify guarding the connection state. time: Duration-bounded request
# awaits. net/io-util are pulled transitively by the editor-client WS transport.
# process: tokio::process::Command for spawning/awaiting the engine child
# process (Workstream J).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
tracing = "0.1"
