[package]
name = "norves-bridge-editor-client"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
norves-bridge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# The WS transport (G2) needs a real I/O driver, so this crate (and only this
# crate) overrides the workspace tokio features to add `net`/`io-util`. The
# workspace default stays I/O-free for any consumer that uses only the trait /
# loopback transport. tokio-tungstenite 0.29 drives over a tokio TcpStream, which
# requires the `net` driver; `io-util` is included for the AsyncRead/AsyncWrite
# adapters it layers on top.
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# test-util gives deterministic time (time::pause/advance) for the timeout test;
# rt-multi-thread exercises the dispatcher task under a real multi-thread spawn.
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
